     before in some situations. [ticket:871]

   - added "cascade delete" behavior to "dynamic" relations just like
     that of regular relations.  if passive_deletes flag (also just added)
     is not set, a delete of the parent item will trigger a full load of 
     the child items so that they can be deleted or updated accordingly.
     
   - query.get() and query.load() do not take existing filter or other
     criterion into account; these methods *always* look up the given id
     in the database or return the current instance from the identity map, 
     disregarding any existing filter, join, group_by or other criterion
     which has been configured. [ticket:893]
          
   - new synonym() behavior: an attribute will be placed on the mapped
     class, if one does not exist already, in all cases. if a property
     already exists on the class, the synonym will decorate the property
     with the appropriate comparison operators so that it can be used in in
     column expressions just like any other mapped attribute (i.e. usable in
     filter(), etc.) the "proxy=True" flag is deprecated and no longer means
     anything. Additionally, the flag "map_column=True" will automatically
     generate a ColumnProperty corresponding to the name of the synonym,
     i.e.: 'somename':synonym('_somename', map_column=True) will map the
     column named 'somename' to the attribute '_somename'. See the example
     in the mapper docs. [ticket:801]

   - added support for version_id_col in conjunction with inheriting mappers.
     version_id_col is typically set on the base mapper in an inheritance
     relationship where it takes effect for all inheriting mappers. 
     [ticket:883]
   
   - relaxed rules on column_property() expressions having labels; any
     ColumnElement is accepted now, as the compiler auto-labels non-labeled
     ColumnElements now.  a selectable, like a select() statement, still